[package]
name = "stft_audio_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
stft_audio_lib = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
log = { workspace = true }
env_logger = "0.11.0"
num-complex = { workspace = true }

[features]
default = ["image"]
image = []
