[package]
name = "stft_audio_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
realfft = { workspace = true }
rustfft = { workspace = true }
hound = { workspace = true }
num-complex = { workspace = true }
symphonia = { workspace = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
log = { workspace = true }
env_logger = { version = "0.11.0", optional = true }
image = { workspace = true , optional = true }

[features]
default = ["env_logger", "image"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
env_logger = ["dep:env_logger"]
image = ["dep:image"]

[dependencies.wasm-bindgen]
version = "0.2.87"
optional = true